[tool.poetry]
name = "hexagonal-py"
version = "0.0.23"
description = """Hexagonal Coherence Check"""
readme = 'README.md'
authors = ["rfrezino <rodrigofrezino@gmail.com>"]
packages = [{ include = "hexagonal", from = "src"}]
keywords = ["hexagonal architecture", "onion architecture", "enforce rules", "coherence check"]
exclude = ["src/hexagonal/hexagonal_project_config.py"]

[tool.poetry.dependencies]
python = "^3.7"
diagrams = "^0.20.0"
click = "^8.0.3"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hexagonal = 'hexagonal.infrastructure.cli:main'
